PS4Starter/ORBIS_Debug/PS4Starter.log
  Performing Custom Build Tools
  Automatically set output format using source file "C:\Users\b8052301\Source\Repos\Team-4-PS4\Assets\Textures\doge.png" to : "B8G8R8X8UNormSrgb"
  Texture descriptors information (version 2):
  
  index) width, height, depth, format            , type        ,      size
      0)   256,    256,     1, B8G8R8X8UNormSrgb , 2d(mips:1)  ,     262144 bytes
  VertexShader.pssl
C:\Users\b8052301\Source\Repos\Team-4-PS4\PS4Starter\VertexShader.pssl(37,36): error D6929: this expression cannot be used as a function
     matrix normalMatrix = transpose ( inverse ( modelMatrix ));
                                       ^~~~~~~                   
C:\Users\b8052301\Source\Repos\Team-4-PS4\PS4Starter\VertexShader.pssl(38,42): error D5426: 'column_major float4x4' and 'float3' are incompatible. Please explicitly cast or swizzle
     Output.Normal = normalize (normalMatrix *  normalize (Input.Normal ));
                                ~~~~~~~~~~~~ ^  ~~~~~~~~~~~~~~~~~~~~~~~~~   
